--- a/package.json
+++ b/package.json
@@ -2,27 +2,30 @@
   "name": "bdd-wallet",
   "version": "1.0.0",
   "description": "Behavior Driven Developement school project to use cucumber as a testing plateform",
-  "main": "index.js",
+  "main": "./build/index.js",
   "scripts": {
     "build": "rimraf ./build && tsc",
-    "start:test": "npm run build && ts-node ./build/testIndex.js",
-    "test": "npm run build && cucumber-js"
+    "test:cucumber": "rimraf ./build && tsc && cucumber-js",
+    "test:unit": "rimraf ./build && tsc && mocha ./test/test.js"
   },
   "keywords": [
-    "cucumber"
+    "gherkin",
+    "cucumber",
+    "cucumber-js",
+    "typescript"
   ],
   "author": "Maxime d'Harboullé",
   "license": "ISC",
   "devDependencies": {
+    "@cucumber/cucumber": "^7.0.0",
     "@types/node": "^12.18.2",
     "nodemon": "^2.0.6",
     "rimraf": "^3.0.2",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.5",
-    "@cucumber/cucumber": "^7.0.0"
+    "typescript": "^4.0.5"
   },
   "dependencies": {
     "@types/axios": "^0.14.0",
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "mocha": "^8.2.1"
   }
 }
