--- a/tsconfig.json
+++ b/tsconfig.json
@@ -66,7 +66,9 @@
     "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
   },
   "exclude": [
+    "./build/**/*.js",
+    "./test/**/*.js",
     "cucumber.js",
-    "features/**/*.js"
+    "./features/**/*.js"
   ]
 }
