--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "./build/index.js",
   "scripts": {
     "build": "rimraf ./build && tsc",
-    "test:cucumber": "rimraf ./build && tsc && cucumber-js",
-    "test:unit": "rimraf ./build && tsc && mocha ./test/test.js"
+    "test:cucumber": "cucumber-js -p default",
+    "test:unit": "rimraf ./build && tsc && chai ./test/test.js"
   },
   "keywords": [
     "gherkin",
@@ -18,14 +18,19 @@
   "license": "ISC",
   "devDependencies": {
     "@cucumber/cucumber": "^7.0.0",
+    "@types/chai": "^4.2.14",
+    "@types/cucumber": "^7.0.0",
     "@types/node": "^12.18.2",
+    "chai": "^4.2.0",
+    "cucumber-pretty": "^6.0.0",
+    "cucumber-tsflow": "^4.0.0-rc.1",
     "nodemon": "^2.0.6",
     "rimraf": "^3.0.2",
-    "typescript": "^4.0.5"
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   },
   "dependencies": {
     "@types/axios": "^0.14.0",
-    "axios": "^0.21.1",
-    "mocha": "^8.2.1"
+    "axios": "^0.21.1"
   }
 }
