--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Behavior Driven Developement school project to use cucumber as a testing plateform",
   "main": "./build/index.js",
   "scripts": {
-    "build": "rimraf ./build && tsc",
+    "build": "rimraf ./build && tsc && npm run clean-build",
+    "clean-build": "rimraf ./build/features && mv ./build/src/* ./build && rmdir ./build/src",
     "test:cucumber": "cucumber-js -p default",
     "test:unit": "rimraf ./build && tsc && mocha ./test/test.js"
   },
