--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,5 +12,6 @@ jobs:
       - name: Run a multi-line script
         run: |
           npm install
+          npm run build
           npm run test:unit
           npm run test:cucumber
