--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "rimraf ./build && tsc && npm run clean-build",
     "clean-build": "rimraf ./build/features && mv ./build/src/* ./build && rmdir ./build/src",
     "test:cucumber": "cucumber-js -p default",
-    "test:unit": "rimraf ./build && tsc && mocha ./test/test.js"
+    "test:unit": "npm run build && mocha ./test/test.js"
   },
   "keywords": [
     "gherkin",
