--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Run tests
 on:
   push:
     branches: [ master ]
@@ -13,6 +13,5 @@ jobs:
         run: |
           npm install
           npm run build
-          ls
           npm run test:unit
           npm run test:cucumber
