--- a/.github/workflows/test_unit.yml
+++ b/.github/workflows/test_unit.yml
@@ -9,7 +9,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Run unit test
         run: |
+          touch .env
+          API_KEY=${{ secrets.API_KEY }} >> .env
           npm install
           npm run build
           npm run test:unit
-          npm run test:cucumber
