--- a/.github/workflows/test_cucumber.yml
+++ b/.github/workflows/test_cucumber.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Run cucumber test
         run: |
           touch .env
-          API_KEY=${{ secrets.API_KEY }} >> .env
+          echo API_KEY=${{ secrets.API_KEY }} >> .env
           npm install
           npm run build
           npm run test:cucumber
